# library

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
app/: database.py  main.py  models.py  schemas.py
app/repositories/: author_repository.py  book_repository.py  google_books_repository.py
app/services/: author_service.py  book_service.py
tests/: conftest.py  test_author_service.py  test_book_service.py
